Removed dependency on org.apache.tomcat.util.codec.binary.Base64 and solved compilation problem
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_5.x/Server/trunk@24516 99afaf0d-6903-0410-885a-c66a8bbb5f81